tests/baselines/reference/libTypeScriptOverrideSimple.errors.txt
index.ts(6,1): error TS2304: Cannot find name 'window'.


==== /node_modules/@typescript/lib-dom/index.d.ts (0 errors) ====
    interface ABC { abc: string }
==== index.ts (1 errors) ====
    /// <reference lib="dom" />
    const a: ABC = { abc: "Hello" }
    
    // This should fail because libdom has been replaced
    // by the module above ^
    window.localStorage
    ~~~~~~
!!! error TS2304: Cannot find name 'window'.
    